// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`u-form-table.vue Demo-动态按钮 1`] = `
<div class="root" direction="vertical" gap="small" type vusion-slot-name="default">
  <table class="root">
    <thead>
      <tr>
        <th width="170">区域</th>
        <th width="170">VPC</th>
        <th width="200">关联描述</th>
        <th width="40"></th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          <div size="huge full">
            <span>b</span>
            <span>请输入区域</span>
            <input size="huge full" type="text">
          </div>
        </td>
        <td>
          <div class="root" disabled="disabled" size="huge full" tabindex>
            <span>b</span>
            <span>暂无可选择的 VPC</span>
            <div class style="direction: ltr;" tags-overflow="collapse">
            </div>
            <transition-stub name="fade" style="width: 100%;">
              <div class="root" style="display: none;">
                <div>
                </div>
              </div>
            </transition-stub>
          </div>
        </td>
        <td>
          <div maxlength="100" size="huge full">
            <span>b</span>
            <span>100字符以内</span>
            <input maxlength="100" size="huge full" type="text">
          </div>
        </td>
        <td>
          <a class="root" hovertype="underline" tabindex="0" target="_self" vusion-slot-name-edit="text">
          </a>
        </td>
      </tr>
      <tr>
        <td>
          <div size="huge full">
            <span>b</span>
            <span>请输入区域</span>
            <input size="huge full" type="text">
          </div>
        </td>
        <td>
          <div class="root" disabled="disabled" size="huge full" tabindex>
            <span>b</span>
            <span>暂无可选择的 VPC</span>
            <div class style="direction: ltr;" tags-overflow="collapse">
            </div>
            <transition-stub name="fade" style="width: 100%;">
              <div class="root" style="display: none;">
                <div>
                </div>
              </div>
            </transition-stub>
          </div>
        </td>
        <td>
          <div maxlength="100" size="huge full">
            <span>b</span>
            <span>100字符以内</span>
            <input maxlength="100" size="huge full" type="text">
          </div>
        </td>
        <td>
          <a class="root" hovertype="underline" tabindex="0" target="_self" vusion-slot-name-edit="text">
          </a>
        </td>
      </tr>
      <tr>
        <td colspan="4">
          <a class="root" hovertype="underline" tabindex="0" target="_self" vusion-slot-name-edit="text">
            添加项
          </a>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`u-form-table.vue Demo-基本用法 1`] = `
<div>
  <table class="root">
    <thead>
      <tr>
        <th width="20%">序号</th>
        <th width="20%">姓名</th>
        <th>地址</th>
        <th width="20%">出生日期</th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>1</td>
        <td>张三</td>
        <td>浙江省杭州市滨江区网商路599号网易大厦</td>
        <td>1991-05-28</td>
      </tr>
      <tr>
        <td>2</td>
        <td>小明</td>
        <td>浙江省杭州市滨江区江虹路459号英飞特科技园</td>
        <td>1992-09-14</td>
      </tr>
      <tr>
        <td>3</td>
        <td>李四</td>
        <td>浙江省杭州市滨江区秋溢路606号西可科技园</td>
        <td>1990-02-28</td>
      </tr>
      <tr>
        <td>4</td>
        <td>李华</td>
        <td>浙江省杭州市滨江区长河路590号东忠科技园</td>
        <td>1989-12-10</td>
      </tr>
      <tr>
        <td>5</td>
        <td>王五</td>
        <td>浙江省杭州市滨江区网商路599号网易大厦二期</td>
        <td>1993-07-16</td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`u-form-table.vue Demo-基本用法 2`] = `
<table class="root">
  <thead>
    <tr>
      <th width="170">区域</th>
      <th width="170">VPC</th>
      <th width="200">关联描述</th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        <div size="huge full">
          <span>b</span>
          <span>请输入区域</span>
          <input size="huge full" type="text">
        </div>
      </td>
      <td>
        <div class="root" disabled="disabled" size="huge full" tabindex>
          <span>b</span>
          <span>暂无可选择的 VPC</span>
          <div class style="direction: ltr;" tags-overflow="collapse">
          </div>
          <transition-stub name="fade" style="width: 100%;">
            <div class="root" style="display: none;">
              <div>
              </div>
            </div>
          </transition-stub>
        </div>
      </td>
      <td>
        <div maxlength="100" size="huge full">
          <span>b</span>
          <span>100字符以内</span>
          <input maxlength="100" size="huge full" type="text">
        </div>
      </td>
    </tr>
    <tr>
      <td>
        <div size="huge full">
          <span>b</span>
          <span>请输入区域</span>
          <input size="huge full" type="text">
        </div>
      </td>
      <td>
        <div class="root" disabled="disabled" size="huge full" tabindex>
          <span>b</span>
          <span>暂无可选择的 VPC</span>
          <div class style="direction: ltr;" tags-overflow="collapse">
          </div>
          <transition-stub name="fade" style="width: 100%;">
            <div class="root" style="display: none;">
              <div>
              </div>
            </div>
          </transition-stub>
        </div>
      </td>
      <td>
        <div maxlength="100" size="huge full">
          <span>b</span>
          <span>100字符以内</span>
          <input maxlength="100" size="huge full" type="text">
        </div>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`u-form-table.vue Demo-悬浮高亮 1`] = `
<div>
  <table class="root" hover>
    <thead>
      <tr>
        <th width="20%">序号</th>
        <th width="20%">姓名</th>
        <th>地址</th>
        <th width="20%">出生日期</th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>1</td>
        <td>张三</td>
        <td>浙江省杭州市滨江区网商路599号网易大厦</td>
        <td>1991-05-28</td>
      </tr>
      <tr>
        <td>2</td>
        <td>小明</td>
        <td>浙江省杭州市滨江区江虹路459号英飞特科技园</td>
        <td>1992-09-14</td>
      </tr>
      <tr>
        <td>3</td>
        <td>李四</td>
        <td>浙江省杭州市滨江区秋溢路606号西可科技园</td>
        <td>1990-02-28</td>
      </tr>
      <tr>
        <td>4</td>
        <td>李华</td>
        <td>浙江省杭州市滨江区长河路590号东忠科技园</td>
        <td>1989-12-10</td>
      </tr>
      <tr>
        <td>5</td>
        <td>王五</td>
        <td>浙江省杭州市滨江区网商路599号网易大厦二期</td>
        <td>1993-07-16</td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`u-form-table.vue Demo-条纹展示 1`] = `
<div>
  <table class="root" striped>
    <thead>
      <tr>
        <th width="20%">序号</th>
        <th width="20%">姓名</th>
        <th>地址</th>
        <th width="20%">出生日期</th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>1</td>
        <td>张三</td>
        <td>浙江省杭州市滨江区网商路599号网易大厦</td>
        <td>1991-05-28</td>
      </tr>
      <tr>
        <td>2</td>
        <td>小明</td>
        <td>浙江省杭州市滨江区江虹路459号英飞特科技园</td>
        <td>1992-09-14</td>
      </tr>
      <tr>
        <td>3</td>
        <td>李四</td>
        <td>浙江省杭州市滨江区秋溢路606号西可科技园</td>
        <td>1990-02-28</td>
      </tr>
      <tr>
        <td>4</td>
        <td>李华</td>
        <td>浙江省杭州市滨江区长河路590号东忠科技园</td>
        <td>1989-12-10</td>
      </tr>
      <tr>
        <td>5</td>
        <td>王五</td>
        <td>浙江省杭州市滨江区网商路599号网易大厦二期</td>
        <td>1993-07-16</td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`u-form-table.vue Demo-组合修饰 1`] = `
<div>
  <table class="root" hover line="both" striped>
    <thead>
      <tr>
        <th width="20%">序号</th>
        <th width="20%">姓名</th>
        <th>地址</th>
        <th width="20%">出生日期</th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>1</td>
        <td>张三</td>
        <td>浙江省杭州市滨江区网商路599号网易大厦</td>
        <td>1991-05-28</td>
      </tr>
      <tr>
        <td>2</td>
        <td>小明</td>
        <td>浙江省杭州市滨江区江虹路459号英飞特科技园</td>
        <td>1992-09-14</td>
      </tr>
      <tr>
        <td>3</td>
        <td>李四</td>
        <td>浙江省杭州市滨江区秋溢路606号西可科技园</td>
        <td>1990-02-28</td>
      </tr>
      <tr>
        <td>4</td>
        <td>李华</td>
        <td>浙江省杭州市滨江区长河路590号东忠科技园</td>
        <td>1989-12-10</td>
      </tr>
      <tr>
        <td>5</td>
        <td>王五</td>
        <td>浙江省杭州市滨江区网商路599号网易大厦二期</td>
        <td>1993-07-16</td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`u-form-table.vue Demo-表格线条 1`] = `
<div>
  <table class="root" line="both">
    <thead>
      <tr>
        <th width="20%">序号</th>
        <th width="20%">姓名</th>
        <th>地址</th>
        <th width="20%">出生日期</th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>1</td>
        <td>张三</td>
        <td>浙江省杭州市滨江区网商路599号网易大厦</td>
        <td>1991-05-28</td>
      </tr>
      <tr>
        <td>2</td>
        <td>小明</td>
        <td>浙江省杭州市滨江区江虹路459号英飞特科技园</td>
        <td>1992-09-14</td>
      </tr>
      <tr>
        <td>3</td>
        <td>李四</td>
        <td>浙江省杭州市滨江区秋溢路606号西可科技园</td>
        <td>1990-02-28</td>
      </tr>
      <tr>
        <td>4</td>
        <td>李华</td>
        <td>浙江省杭州市滨江区长河路590号东忠科技园</td>
        <td>1989-12-10</td>
      </tr>
      <tr>
        <td>5</td>
        <td>王五</td>
        <td>浙江省杭州市滨江区网商路599号网易大厦二期</td>
        <td>1993-07-16</td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`u-form-table.vue Demo-表格线条 2`] = `
<div>
  <table class="root" line="horizontal">
    <thead>
      <tr>
        <th width="20%">序号</th>
        <th width="20%">姓名</th>
        <th>地址</th>
        <th width="20%">出生日期</th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>1</td>
        <td>张三</td>
        <td>浙江省杭州市滨江区网商路599号网易大厦</td>
        <td>1991-05-28</td>
      </tr>
      <tr>
        <td>2</td>
        <td>小明</td>
        <td>浙江省杭州市滨江区江虹路459号英飞特科技园</td>
        <td>1992-09-14</td>
      </tr>
      <tr>
        <td>3</td>
        <td>李四</td>
        <td>浙江省杭州市滨江区秋溢路606号西可科技园</td>
        <td>1990-02-28</td>
      </tr>
      <tr>
        <td>4</td>
        <td>李华</td>
        <td>浙江省杭州市滨江区长河路590号东忠科技园</td>
        <td>1989-12-10</td>
      </tr>
      <tr>
        <td>5</td>
        <td>王五</td>
        <td>浙江省杭州市滨江区网商路599号网易大厦二期</td>
        <td>1993-07-16</td>
      </tr>
    </tbody>
  </table>
</div>
`;
